--- a/Script/index.html
+++ b/Script/index.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Baper Wallet</title>
 </head>
-<body>
-    
+
+<body class="bg-gray-800">
+    <section class="max-w-md min-h-screen mx-auto py-6 bg-gray-200 flex flex-col justify-between">
+        <header>
+            <nav class="flex justify-center items-center mt-16">
+                <div class="mt-10 relative flex justify-center items-center w-9/12 mb-10 ">
+                    <img src="/assets/bg.png" alt="" class="w-60 absolute">
+                    <img src="/assets/Group.png" alt="" class="w-16 absolute">
+                </div>
+            </nav>
+
+            <form class="card ">
+                <input type="number" placeholder="account number" required class="input mx-auto mt-16 input-bordered input-primary w-full max-w-xs" />
+                <input type="password" placeholder="XXXX" required class="input mx-auto mt-5 input-bordered input-primary w-full max-w-xs" />
+                <button class="btn btn-primary mx-5 mt-10 text-xl">Login</button>
+            </form>
+        </header>
+        <div class="text-center font">
+            <h1 class="text-xl text-emerald-600">Developed By:</h1>
+            <p>IBRAHIM</p>
+        </div>
+    </section>
 
     <script src="./Script.js"></script>
 </body>
+</body>
+
 </html>
