Complete loigin section with js and home part without js

--- a/Script/index.html
+++ b/Script/index.html
@@ -23,10 +23,12 @@
                 </div>
             </nav>
 
-            <form class="card ">
-                <input type="number" placeholder="account number" required class="input mx-auto mt-16 input-bordered input-primary w-full max-w-xs" />
-                <input type="password" placeholder="XXXX" required class="input mx-auto mt-5 input-bordered input-primary w-full max-w-xs" />
-                <button class="btn btn-primary mx-5 mt-10 text-xl">Login</button>
+            <form class="card bg-white p-4 m-4 shadow-xl">
+                <input type="number" id="acc-form" placeholder="account number" required
+                    class="input mx-auto mt-16 input-bordered input-primary w-full max-w-xs" />
+                <input type="number" id="pin-form" placeholder="XXXX" required
+                    class="input mx-auto mt-5 input-bordered input-primary w-full max-w-xs" />
+                <button id="login-btn" class="btn btn-primary mx-5 mt-10 text-xl">Login</button>
             </form>
         </header>
         <div class="text-center font">
