Completed Payoo Project

--- a/Script/index.html
+++ b/Script/index.html
@@ -28,6 +28,9 @@
                     class="input mx-auto mt-16 input-bordered input-primary w-full max-w-xs" />
                 <input type="number" id="pin-form" placeholder="XXXX" required
                     class="input mx-auto mt-5 input-bordered input-primary w-full max-w-xs" />
+                    <div id="alert-container w-full flex justify-center items-center">
+
+                    </div>
                 <button id="login-btn" class="btn btn-primary mx-5 mt-10 text-xl">Login</button>
             </form>
         </header>
@@ -36,7 +39,7 @@
             <p>IBRAHIM</p>
         </div>
     </section>
-
+    <script src="conversion.js"></script>
     <script src="./Script.js"></script>
 </body>
 </body>
