--- a/Script/home.html
+++ b/Script/home.html
@@ -20,7 +20,7 @@
             <div class="flex items-center">
                 <div class="w-12"><img src="/assets/Group.png" class="" alt=""></div>
                 <div>
-                    <h1 class="text-2xl font-bold">$<span>45000</span></h1>
+                    <h1 class="text-2xl font-bold">$<span id="balance">45000</span></h1>
                     <p class="text-gray-700 font">Available Balance</p>
                 </div>
             </div>
@@ -35,11 +35,11 @@
         </div>
         <div class="w-full h-fit bg-white p-2">
             <div class="w-full grid grid-cols-3 gap-3">
-                <div class="btn w-full h-full   p-3 rounded-lg border border-gray-300 shadow-md  flex flex-col items-center justify-center">
+                <div class="btn w-full h-full   p-3 rounded-lg border border-gray-300 shadow-md  flex flex-col items-center justify-center" id="add-money">
                     <img src="/assets/purse1.png" alt="">
                     <h1>Add Money</h1>
                 </div>
-                <div class="btn w-full h-full p-3 rounded-lg border border-gray-300 shadow-md flex flex-col items-center justify-center">
+                <div class="btn w-full h-full p-3 rounded-lg border border-gray-300 shadow-md flex flex-col items-center justify-center" id="cash-out">
                     <img src="/assets/send1.png" alt="">
                     <h1>Cashout</h1>
                 </div>
@@ -55,16 +55,53 @@
                     <img src="/assets/money1.png" alt="">
                     <h1>Pay Bill</h1>
                 </div>
-                <div class="btn w-full h-full p-3 rounded-lg border border-gray-300 shadow-md flex flex-col items-center justify-center">
+                <div class="btn w-full h-full p-3 rounded-lg border border-gray-300 shadow-md flex flex-col items-center justify-center" id="showTransaction">
                     <img src="/assets/transaction1.png" alt="">
                     <h1>Transaction</h1>
                 </div>
             </div>
         </div>
 
-    </section>
 
-    <script src="./Script.js"></script>
+        <div class="card bg-white  mt-5 p-2 w-full py-16" id="addMoney">
+            <h1 class="text-xl font-bold ml-3 mb-3">Add Money:</h1>
+            <div class="form flex flex-col items-center gap-2 mt-5">
+                <input  type="number" placeholder="Account Number" class="input input-bordered input-info w-full max-w-xs" id="account" />
+                <input  type="number" placeholder="Amount" class="input input-bordered input-info w-full max-w-xs" id="amount"/>
+                <input  type="number" placeholder="PIN" class="input input-bordered input-info w-full max-w-xs" id="pin" />
+                <button id="btn-addMoney" class="btn btn-outline text-white bg-red-950 px-16">Add Money</button>
+            </div>
+        </div>
+
+
+        <div class="card bg-white  mt-5 p-2 w-full py-16" id="cashOut">
+            <h1 class="text-xl font-bold ml-3 mb-3">Cash Out:</h1>
+            <div class="form flex flex-col items-center gap-2 mt-5">
+                <select class="select select-primary w-full max-w-xs" id="cashOut-type" required>
+                    <option disabled selected >Select Cashout Type</option>
+                    <option>Bkash</option>
+                    <option>Nagad</option>
+                    <option>ATM</option>
+                  </select>
+                <input required type="number" placeholder="Account Number" class="input input-bordered input-info w-full max-w-xs" id="cashout-account" />
+                <input required type="number" placeholder="Amount" class="input input-bordered input-info w-full max-w-xs" id="cashout-amount" />
+                <input required type="number" placeholder="PIN" class="input input-bordered input-info w-full max-w-xs" id="cashout-pin" />
+                <button class="btn btn-outline text-white bg-red-950 px-16" id="cashout-btn">Cashout</button>
+            </div>
+        </div>
+
+
+
+        <div class="card bg-white  mt-5 p-2 w-full py-16" id="transacionPart">
+            <h1 class="text-xl font-bold ml-3 mb-3">Recent Transactions:</h1>
+            <ul id="ulTag">
+            </ul>
+        </div>
+
+
+    </section>
+    <script src="./getValue.js"></script>
+    <script src="./home.js"></script>
 </body>
 </body>
 
